k8s/apps/vaultwarden/app/httproute.yaml
---
# HTTPRoute for vaultwarden - INTERNAL
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-internal
  namespace: vaultwarden
spec:
  parentRefs:
    - name: envoy-nx
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - v.x.nx8192.win
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
